--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans&subset=latin);
+
+@font-face {
+	font-family: 'Arial-Black-Fix';
+	src: local('Arial Black');
+}
 
 body {
 	width: 100%;
@@ -6,15 +11,13 @@ body {
 	margin: 0;
 	padding: 0;
 	background: #242424;
-	background: -moz-linear-gradient(left, #0C0D0D 0%, #333 50%, #0C0D0D 100%);
 	background: -webkit-linear-gradient(left, #0C0D0D 0%, #333 50%, #0C0D0D 100%);
-	background: -ms-linear-gradient(left, #0C0D0D 0%, #333 50%, #0C0D0D 100%);
 	background: linear-gradient(to right, #0C0D0D 0%, #333 50%, #0C0D0D 100%);
-	-khtml-user-select: none;
-	-moz-user-select:none;
 	-webkit-user-select: none;
-	-ms-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
 }
+
 #hintergrund {
 	display: none;
 	width: 100%;
@@ -23,6 +26,7 @@ body {
 	z-index: 1;
 	border: none;
 }
+
 #content {
 	position: absolute;
 	top: 0;
@@ -31,8 +35,11 @@ body {
 	height: 100%;
 	z-index: 2;
 }
+
 a { color: dodgerblue; text-decoration: none; }
+
 a:hover { color: royalblue; }
+
 div#video-box {
 	position: absolute;
 	left: 50%;
@@ -42,17 +49,21 @@ div#video-box {
 	background: black;
 	border: 4px solid black;
 	border-width: 1em 4px;
-	box-shadow: 0px 1px 10px 2px #666;
-    overflow: hidden;
+	box-shadow: 0 1px 10px 2px #666;
+	overflow: hidden;
 }
+
 #video-player video {
-    display: block;  /* fix for this little padding on the parent div */
-    width: 640px;
-    height: 360px;
+	display: block;  /* fix for this little padding on the parent div */
+	width: 640px;
+	height: 360px;
 	border-bottom: thin solid #111;
 	opacity: 0.88;
-	transition: opacity 160ms ease-in-out;
+	filter: alpha(opacity=88);
+	-webkit-transition: opacity 160ms ease-in-out;
+	        transition: opacity 160ms ease-in-out;
 }
+
 #video-player.fullscreen video {
 	position: fixed;
 	height: 100%;
@@ -61,6 +72,7 @@ div#video-box {
 	top: 0;
 	box-shadow: inset 0 -5px 45px 5px black;
 }
+
 #video-title {
 	position: absolute;
 	z-index: 2;
@@ -73,11 +85,13 @@ div#video-box {
 	color: #d0d0d0;
 	/*transition: opacity 0.2s;*/
 }
+
 .fullscreen #video-title {
-    position: fixed;
-    padding: 8px 10px;
-    text-align: center;
+	position: fixed;
+	padding: 8px 10px;
+	text-align: center;
 }
+
 #playArea {
 	position: absolute;
 	z-index: 1;
@@ -86,7 +100,9 @@ div#video-box {
 	left: 0;
 	bottom: 0;
 }
-.fullscreen #playArea { position: fixed; }
+
+.fullscreen #playArea { position: fixed; bottom: 12px; }
+
 #video-controls {
 	position: absolute;
 	z-index: 3;
@@ -99,60 +115,148 @@ div#video-box {
 	background: rgba(12,12,12,0.88);
 	box-shadow: 0 -2px 8px -1px rgba(12,12,12,0.88);
 	cursor: default;
+	word-spacing: -0.5ch;
 }
-.fullscreen #video-controls { position: fixed; margin: auto; text-align: center; }
-.fullscreen #playArea, .fullscreen #video-controls { bottom: 12px; }
-#video-controls * { vertical-align: middle; }
-#video-controls .fa {
+
+.fullscreen #video-controls {
+	position: fixed;
+	bottom: 12px;
+	margin: auto;
+	text-align: center;
+}
+
+#video-controls * {
+	vertical-align: middle;
+	box-sizing: border-box;
+	margin: 0 4px;
+}
+
+#video-controls :first-child { margin-left: 0; }
+#video-controls :last-child { margin-right: 0; }
+
+[id="video-controls"] .fa {
 	font-size: 24px;
 	line-height: 24px;
 	color: #E0E0E0;
-	transition: all 180ms ease-out;
+	cursor: pointer;
+	-webkit-transition: all 180ms ease-out;
+	        transition: all 180ms ease-out;
 }
-#video-controls .fa.disabled { color: rgb(76, 75, 80); }
-#video-controls .fa:not(.disabled) { cursor: pointer; }
-#video-controls .fa:not(.disabled):hover { color: white; text-shadow: 0 0 6px rgba(240,242,244,0.77); }
-#video-controls span { font: 12px 'Open Sans'; color: #CCC; }
+
+#video-controls .fa.disabled { color: rgb(76, 75, 80); cursor: default; }
+
+#video-controls .fa:not(.disabled):hover { color: white; text-shadow: 0 0 6px rgba(240,241,244,0.66); }
+
+#video-controls span {
+	display: inline-block;
+	height: 18px;
+	font: 12px 'Open Sans';
+	color: #CCC;
+}
+
 input[type="range"] {
 	-webkit-appearance: none;
-	appearance: none;
+	   -moz-appearance: none;
+	        appearance: none;
 	height: 7px;
 	margin: 4px;
-	background-color: #C3C2C5;
+	background: rgba(224, 224, 224, 0.85);
 	border-radius: 3px;
 	outline: none;
 }
+
+input[type="range"]::-moz-range-track {
+    background: transparent;
+    padding: 0;
+    border: 0;
+}
+
 input[type="range"]::-webkit-slider-thumb {
 	-webkit-appearance: none;
-	appearance: none;
+	        appearance: none;
+	box-sizing: border-box;
 	width: 14px;
 	height: 14px;
-	background-color: #EEE;
+	padding: 0;
+	background: #EEE;
+	border: 0;
 	border-radius: 50%;
 	box-shadow: 0 0 4px 1px rgba(0,0,0,0.3);
 }
 
-#video-controls #play { font-size: 22px; width: 19px; }
+input[type="range"]::-moz-range-thumb {
+	-moz-appearance: none;
+	     appearance: none;
+	box-sizing: border-box;
+	width: 14px;
+	height: 14px;
+	padding: 0;
+	background: #EEE;
+	border: 0;
+	border-radius: 50%;
+	box-shadow: 0 0 4px 1px rgba(0,0,0,0.3);
+}
+
+/*input[type="range"]::-ms-thumb {
+	appearance: none;
+	box-sizing: border-box;
+	width: 14px;
+	height: 14px;
+	padding: 0;
+	background: #EEE;
+	border: 0;
+	border-radius: 50%;
+	box-shadow: 0 0 4px 1px rgba(0,0,0,0.3);
+}*/
+
+input[type="range"]::-webkit-slider-thumb:active { background: white; }
+
+input[type="range"]::-moz-range-thumb:active { background: white; }
+
+/*input[type="range"]::-ms-thumb:active { background: white; }*/
+
+#play { font-size: 22px; width: 19px; }
+
 #currentT { margin-left: 6px; }
-#timeline { margin: 8px 3px 8px 2px; width: 40%; }
+
+#timeline { margin: 8px 3px 9px 2px; width: 44%; }
+
 #duration { margin-right: 12px; }
-#video-controls #volume-down { width: 14px; }
-input#volume { margin: 8px 4px; width: 21.5%; }
-#video-controls #fullscreen { margin-left: 10px; height: 21px; font-size: 22px; }
-#video-controls #hdtoggle {
-	font: italic 11px 'Arial Black' !important;
-	border: 2px solid #E0E0E0;
+
+#volume-down { width: 14px; }
+
+#volume { margin: 8px 4px 9px; width: 17%; max-width: 150px; }
+
+#fullscreen { margin-left: 10px; height: 22px; font-size: 24px; }
+
+#fullscreen.fa-rotate-180 { margin-top: -2px; }
+
+#hdtoggle {
+	height: 19px;
+	margin-top: -1px;
 	padding: 0 6px 0 5px;
+	font: italic 12px/15px 'Arial Black', Arial-Black-Fix !important;
+	border: 2px solid #E0E0E0;
 	border-radius: 4px;
 }
-#video-controls #hdtoggle.disabled { border-color: rgb(91, 90, 95); }
-#video-controls #hdtoggle:not(.disabled):hover {
-	border-color: white;
-	box-shadow: 0 0 6px rgba(236,238,240,0.6), inset 0 0 5px rgba(238,240,242,0.7);
-}
-#video-controls #hdtoggle.active { color: deepskyblue; }
 
-p.info { font: 16px Georgia; color: #AAA; letter-spacing: 0.7px; line-height: 1.4em; padding: 4px 1em; text-shadow: 3px -3px 6px #999; }
+#hdtoggle.disabled { border-color: rgb(91, 90, 95); }
+
+#hdtoggle:not(.disabled):hover {
+	border-color: white;
+	box-shadow: 0 0 6px rgba(236,237,240,0.5), inset 0 0 5px rgba(238,239,242,0.6);
+}
+
+#hdtoggle.active { color: deepskyblue; }
+
+
+p.info {
+	padding: 4px 1em;
+	font: 16px/1.4em Georgia;
+	letter-spacing: 0.7px;
+	color: #AAA;
+	text-shadow: 3px -3px 6px #999;
+}
 
 @media (min-height: 500px) {
 	body { overflow-y: hidden; }
